[gd_scene load_steps=9 format=2]

[ext_resource path="res://UI/BingkaiDialog.png" type="Texture" id=1]
[ext_resource path="res://UI/Dialogue.gd" type="Script" id=2]
[ext_resource path="res://UI/Gamer.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://UI/Invisible.png" type="Texture" id=4]
[ext_resource path="res://Sound/Dialogue/beep.mp3" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=3]
size = 22
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 22
font_data = ExtResource( 3 )

[node name="Dialogue" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 2 )

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_top = 103.0
margin_right = 320.0
margin_bottom = 180.0
texture = ExtResource( 1 )
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5

[node name="NextDialogueButton" type="TouchScreenButton" parent="NinePatchRect"]
light_mask = 0
position = Vector2( -2.38419e-07, -103 )
scale = Vector2( 5, 2.80938 )
normal = ExtResource( 4 )
pressed = ExtResource( 4 )
action = "Interract"

[node name="Name" type="Label" parent="NinePatchRect"]
margin_left = 6.0
margin_top = 1.0
margin_right = 162.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 3 )
text = "Name"

[node name="Dialogue" type="RichTextLabel" parent="NinePatchRect"]
margin_left = 6.0
margin_top = 20.0
margin_right = 314.0
margin_bottom = 70.0
custom_fonts/normal_font = SubResource( 2 )
tab_size = 0
text = "Teks"

[node name="Name2" type="Label" parent="NinePatchRect"]
margin_left = 167.0
margin_top = 1.0
margin_right = 314.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 4 )
text = "Name2"
align = 2

[node name="Timer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="Tween" type="Tween" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
volume_db = -15.0

[node name="FailLabel" type="Label" parent="."]
visible = false
margin_left = 107.0
margin_top = 133.0
margin_right = 215.0
margin_bottom = 147.0
text = "FAILED TO LOAD"

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
